# ted-v2

./: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: on-release-main.yml
docs/: index.md  modules.md
ted_v2/: bot.py
tests/: test_foo.py
